# mcp

./: .env.example  README.md  pyproject.toml
src/: main.py
src/ocp/: authentication.py  base.py  environments_manager.py  insights.py  integrations.py  miniapps.py  orchestrator.py
src/tests/: test_authentication.py  test_base.py  test_insights.py
