[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
